--- a/RPG_1.vcxproj.filters
+++ b/RPG_1.vcxproj.filters
@@ -38,26 +38,26 @@
     <ClInclude Include="TinyXML\tinyxml.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="Buuton.h">
-      <Filter>Заголовочные файлы</Filter>
-    </ClInclude>
-    <ClInclude Include="keyTreatment.h">
-      <Filter>Заголовочные файлы</Filter>
-    </ClInclude>
-    <ClInclude Include="level.h">
-      <Filter>Заголовочные файлы</Filter>
-    </ClInclude>
-    <ClInclude Include="level.hpp">
-      <Filter>Заголовочные файлы</Filter>
-    </ClInclude>
-    <ClInclude Include="map.h">
-      <Filter>Заголовочные файлы</Filter>
+    <ClInclude Include="TextureManager.h">
+      <Filter>Файлы исходного кода</Filter>
     </ClInclude>
     <ClInclude Include="Object.h">
-      <Filter>Заголовочные файлы</Filter>
+      <Filter>Файлы исходного кода</Filter>
     </ClInclude>
-    <ClInclude Include="TextureManager.h">
-      <Filter>Заголовочные файлы</Filter>
+    <ClInclude Include="map.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
+    <ClInclude Include="level.hpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
+    <ClInclude Include="level.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
+    <ClInclude Include="keyTreatment.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
+    <ClInclude Include="Buuton.h">
+      <Filter>Файлы исходного кода</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
